--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -6,9 +6,16 @@
         <mat-icon>menu</mat-icon>Categories
       </button>
       <div class="search">
-        <p class="placeholder" style="padding: 0; margin: 0">DJI phantom</p>
-        <mat-icon class="search-icon">search</mat-icon>
+        <p class="placeholder" style="padding: 0; margin: 0; color: grey">
+          DJI phantom
+        </p>
+        <mat-icon class="search-icon" style="color: grey">search</mat-icon>
       </div>
+    </div>
+    <div class="icons-mob" style="color: #989090">
+      <mat-icon class="search-icon">search</mat-icon>
+      <mat-icon color="accent" style="color: #989090">favorite</mat-icon>
+      <span class="material-symbols-outlined">person</span>
     </div>
     <div class="fav-signIn">
       <button mat-button color="accent">
@@ -24,7 +31,7 @@
       <span class="material-symbols-outlined">navigate_next</span>
     </div>
     <div class="categories">
-      <ul>
+      <ul style="white-space: pre">
         <li>Live shows</li>
         <li>Streams</li>
         <li>Movies</li>
