--- a/frontend/src/app/body/body.component.html
+++ b/frontend/src/app/body/body.component.html
@@ -9,20 +9,113 @@
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
       veniam, quis nostrud exercitation.
     </p>
+    <p class="line-1-mob">
+      Discover Exciting Events <br />
+      Happening Near You - <br />
+      Stay Tuned for Updates!
+    </p>
+    <p class="line-2-mob">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+    </p>
   </div>
   <div class="content">
     <div class="recommended">
       <div class="recommended-nav">
-        <p style="padding: 0; margin: 0; align-self: center; font-size: large">
-          Recommened shows
-        </p>
-        <span class="material-symbols-outlined">east</span>
+        <div class="recommended-shows-nav">
+          <p
+            style="
+              padding: 0;
+              margin: 0;
+              align-self: center;
+              font-size: large;
+              font-weight: 600;
+            "
+          >
+            Recommened shows
+          </p>
+          <span class="material-symbols-outlined">east</span>
+        </div>
+        <div class="see-all">
+          <a href="">See all</a>
+        </div>
       </div>
-      <div class="recommended-shows">
+      <div
+        class="recommended-shows"
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        [infiniteScrollThrottle]="500"
+        [horizontal]="true"
+        (scrolled)="onScroll()"
+        [scrollWindow]="false"
+      >
         <ul>
           <li *ngFor="let show of recommended">
-            <div>
+            <div class="img-cont">
               <img class="show-img" [src]="show.imgUrl" alt="" />
+              <div class="details">
+                <div
+                  class="name-date"
+                  style="display: flex; justify-content: space-between"
+                >
+                  <p
+                    style="
+                      width: 50%;
+                      overflow: hidden;
+                      white-space: nowrap;
+                      text-overflow: ellipsis;
+                    "
+                  >
+                    {{ show.eventName }}
+                  </p>
+                  <p style="font-size: x-small; color: #989090">
+                    {{ show.date }}
+                  </p>
+                </div>
+                <div
+                  class="loc-time"
+                  style="display: flex; justify-content: space-between"
+                >
+                  <div class="loc">
+                    <span
+                      class="material-symbols-outlined"
+                      style="font-size: large; color: #989090"
+                      >location_on</span
+                    >
+                    <p
+                      style="
+                        padding: 0;
+                        margin: 0;
+                        font-size: x-small;
+                        color: #989090;
+                      "
+                    >
+                      {{ show.cityName }}
+                    </p>
+                  </div>
+                  <div class="time" style="display: flex">
+                    <p
+                      style="
+                        padding: 0;
+                        margin: 0;
+                        font-size: x-small;
+                        color: #989090;
+                      "
+                    >
+                      {{ show.weather }}
+                    </p>
+                    <p
+                      style="
+                        padding: 0;
+                        margin: 0;
+                        font-size: x-small;
+                        color: #989090;
+                      "
+                    >
+                      {{ show.distanceKm }}
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </li>
         </ul>
